# Lab3

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  BadString.cpp  BadString.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgam.cpp  DatalogProgram.h  EndOfFile.cpp  EndOfFile.h  FactsAutomaton.cpp  FactsAutomaton.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Left_ParenAutomaton.cpp  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  (+22 more)
